@@ -99,8 +99,8 @@ public class LayoutVersion {
     RESERVED_REL1_2_0(-41, -32, "Reserved for release 1.2.0", true, CONCAT),
     ADD_INODE_ID(-42, -40, "Assign a unique inode id for each inode", false),
     SNAPSHOT(-43, "Support for snapshot feature"),
-    RESERVED_REL1_3_0(-44, -41,
-        "Reserved for release 1.3.0", true, ADD_INODE_ID, SNAPSHOT),
+    RESERVED_REL1_3_0(-44, -41, "Reserved for release 1.3.0", true,
+    		ADD_INODE_ID, SNAPSHOT, FSIMAGE_NAME_OPTIMIZATION),
     OPTIMIZE_SNAPSHOT_INODES(-45, -43,
         "Reduce snapshot inode memory footprint", false),
     SEQUENTIAL_BLOCK_ID(-46, "Allocate block IDs sequentially and store " +
